--- a/project/package.json
+++ b/project/package.json
@@ -11,7 +11,9 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.1.3",
+        "bcrypt": "^5.1.0",
         "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
         "netlify-cli": "^12.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
