--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.3",
         "react-scripts": "5.0.1",
+        "seedrandom": "^3.0.5",
         "serverless-http": "^3.1.0",
         "web-vitals": "^2.1.4"
     },
