--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
